<resources>
    <string name="app_name">NoteD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_add">Add</string>
    <string name="title_hint">Title</string>
    <string name="Category_hint">Category</string>
    <string name="Description_hint">Description</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>